--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         # Include amd64 on all platforms.
-        goos: [ windows, freebsd, openbsd, linux, dragonfly, darwin ]
+        goos: [ windows, freebsd, openbsd, linux]
         goarch: [ amd64, 386 ]
         include:
           # END Android ARM 8
